Added CS option to usuthesis, since it doesn't have one for some reason

--- a/thesis.tex
+++ b/thesis.tex
@@ -30,7 +30,7 @@
 % For the ECE Department:
 %\documentclass[ee,msthesis]{usuthesis}
 %\documentclass[ce,msthesis]{usuthesis}
-\documentclass[ee,dissertation]{usuthesis}
+%\documentclass[ee,dissertation]{usuthesis}
 %\documentclass[ee,proposal]{usuthesis}
 %\documentclass[ce,dissertation]{usuthesis}
 % For the MAE Department:
@@ -41,6 +41,8 @@
 % For the CEE Department:
 %\documentclass[cee,msthesis]{usuthesis}
 %\documentclass[cee,dissertation]{usuthesis}
+
+\documentclass[cs,msthesis]{usuthesis}
 
 
 %{{{ Packages
@@ -64,7 +66,7 @@
 \usepackage{tikz}       		% The base tikz+pgf package
 \usetikzlibrary{arrows,shapes}	% Optional tikz extensions
 \usepackage[american]{circuitikz}	% TikZ-based package for schematic drawings
-\usepackage{pgfplots}			% Tikz-based package for making plots 
+\usepackage{pgfplots}			% Tikz-based package for making plots
 \pgfplotsset{compat=1.6}        % This *might* be necessary for your
                                 % version of pgfplots.
 
