--- a/acknowl.tex
+++ b/acknowl.tex
@@ -11,11 +11,11 @@
 % $LastChangedBy$
 %
 
-\begin{acknowledgments} 
-I am so happy that my advisor helped me.....
+\begin{acknowledgments}
+FIX ME
 \\
 \begin{flushright} 
-John Q. Engineer 
+Michael D. Hegerhorst
 \end{flushright}
 \end{acknowledgments}
 
