--- a/dedication.tex
+++ b/dedication.tex
@@ -11,8 +11,9 @@
 %
 
 \begin{dedication}
-\begin{center} 
-To all the little people....
+\begin{center}
+% TODO: Fill out with something sweet about Danielle
+FIX ME
 \end{center}
 % 
 % If you intend to have a dedication longer than one line, do not put
