--- a/thesis.tex
+++ b/thesis.tex
@@ -124,7 +124,7 @@ For a Single Line While Including Everything}
     \include{abstract}
     \include{publicabstract}
     \include{dedication}  % optional 
-    \include{acknowl}     % optional
+%    \include{acknowl}     % optional TODO: Do I want acknowledgements?
 
     \tableofcontents
     \listoftables
