--- a/vita.tex
+++ b/vita.tex
@@ -13,7 +13,7 @@
 \begin{vita}
 
 \begin{center}
-{\Large \bf John Q. Engineer}\\
+{\Large \bf Michael D. Hegerhorst}\\
 \end{center}
 
 \section*{Published Journal Articles}
