--- a/thesis.tex
+++ b/thesis.tex
@@ -144,11 +144,12 @@ For a Single Line While Including Everything}
     % Endmatter
     % For BibTeX references: specify a .bib file and a style.
     % The style used here is for IEEE transactions formatting:
-    \references{IEEEabrv,sample}{IEEEtran}
+    \references{IEEEabrv,References/research}{IEEEtran}
+
     % The style used here is for AIAA formatting:
 %    \references{IEEEabrv,sample}{aiaa}
 
-    \include{appendix}
-    \include{vita}
+%    \include{appendix} % FIXME: Uncomment
+%    \include{vita}  % TODO: I don't think I actually need this unless I'm a doctorate.
     %}}}
 \end{document}
