--- a/References/research.bib
+++ b/References/research.bib
@@ -18,4 +18,22 @@
   readstatus      = {skimmed},
 }
 
+
+@InProceedings{Cohensius2017,
+  author     = {Cohensius, Gal and Mannor, Shie and Meir, Reshef and Meirom, Eli and Orda, Ariel},
+  booktitle  = {Proceedings of the 16th Conference on Autonomous Agents and MultiAgent Systems},
+  title      = {Proxy Voting for Better Outcomes},
+  year       = {2017},
+  address    = {Richland, SC},
+  pages      = {858–866},
+  publisher  = {International Foundation for Autonomous Agents and Multiagent Systems},
+  series     = {AAMAS '17},
+  abstract   = {We consider a social choice problem where only a small number of people out of a large population are sufficiently available or motivated to vote. A common solution to increase participation is to allow voters use a proxy, that is, transfer their voting rights to another voter. Considering social choice problems on metric spaces, we compare voting with and without the use of proxies to see which mechanism better approximates the optimal outcome, and characterize the regimes in which proxy voting is beneficial. When voters' opinions are located on an interval, both the median mechanism and the mean mechanism are substantially improved by proxy voting. When voters vote on many binary issues, proxy voting is better when the sample of active voters is too small to provide a good outcome. Our theoretical results extend to situations where available voters choose strategically whether to participate. We support our theoretical findings with empirical results showing substantial benefits of proxy voting on simulated and real preference data.},
+  keywords   = {computational social choice, proxy voting},
+  location   = {S\~{a}o Paulo, Brazil},
+  numpages   = {9},
+  readstatus = {read},
+  url        = {https://dl.acm.org/doi/10.5555/3091125.3091247},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
