Cleaned up chapters

--- a/chapter1-introduction.tex
+++ b/chapter1-introduction.tex
@@ -10,18 +10,18 @@
 % $LastChangedBy: scott $
 %
 
-\chapter{INTRODUCTION}
+\chapter{INTRODUCTION}\label{ch:introduction}
 %%%%%%%% This line gets rid of page number on first page of text
 \thispagestyle{empty}
 %%%%%%%%%%%%%
 
-Image compression or image coding is the process of reducing the
+Image~\cite{TEST}~\cite{TEST2} compression or image coding is the process of reducing the
 redundancy in the image data that may result in some loss of
 information.  Vector quantization (VQ)\footnote{The acronym VQ is used
   as an abbreviation for both vector quantization and vector
   quantizer.} is one such technique.
 
-\section{Background}
+\section{Background}\label{sec:background}
 Binary splitting is illustrated in Fig.~\ref{fig:split}.
 
 \begin{figure}[htbp]
