--- a/chapter2-experimental-design.tex
+++ b/chapter2-experimental-design.tex
@@ -10,7 +10,7 @@
 % $LastChangedBy: scott $
 %
 
-\chapter{RESIDUAL VECTOR QUANTIZATION AND ITS PROBLEMS}
+\chapter{EXPERIMENTAL DESIGN}\label{ch:experimental-design}
 
 \section{Residual Vector Quantization (RVQ)}
 
