Cleaned up project files

--- a/chapter1-introduction.tex
+++ b/chapter1-introduction.tex
@@ -26,7 +26,7 @@ Binary splitting is illustrated in Fig.~\ref{fig:split}.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=0.7\textwidth]{samplefig}
+\includegraphics[width=0.7\textwidth]{figures/samplefig}
 \caption{Binary splitting.}
 \label{fig:split}
 \end{figure}
