--- a/thesis.tex
+++ b/thesis.tex
@@ -144,7 +144,7 @@ For a Single Line While Including Everything}
     % Endmatter
     % For BibTeX references: specify a .bib file and a style.
     % The style used here is for IEEE transactions formatting:
-    \references{IEEEabrv,References/research}{IEEEtran}
+    \references{IEEEabrv, references/research}{IEEEtran}
 
     % The style used here is for AIAA formatting:
 %    \references{IEEEabrv,sample}{aiaa}
