--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -15,7 +15,7 @@
 \thispagestyle{empty}
 %%%%%%%%%%%%%
 
-Image~\cite{TEST}~\cite{TEST2} compression or image coding is the process of reducing the
+Image compression or image coding is the process of reducing the
 redundancy in the image data that may result in some loss of
 information.  Vector quantization (VQ)\footnote{The acronym VQ is used
   as an abbreviation for both vector quantization and vector
@@ -26,7 +26,7 @@ Binary splitting is illustrated in Fig.~\ref{fig:split}.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=0.7\textwidth]{figures/samplefig}
+\includegraphics[width=0.7\textwidth]{content/figures/samplefig}
 \caption{Binary splitting.}
 \label{fig:split}
 \end{figure}
