--- a/thesis.tex
+++ b/thesis.tex
@@ -72,7 +72,7 @@
 
 \usepackage{hyperref} % Creates hyperlinks within document
 \hypersetup{colorlinks=true, linkcolor=blue,
-  citecolor=blue,urlcolor=blue} % Use when compiling the digital copy
+    citecolor=blue,urlcolor=blue} % Use when compiling the digital copy
 % \hypersetup{colorlinks=true, linkcolor=black,
 % citecolor=black,urlcolor=black} % Use when compiling the printed copy
 
@@ -145,9 +145,9 @@ For a Single Line While Including Everything}
     % For BibTeX references: specify a .bib file and a style.
     % The style used here is for IEEE transactions formatting:
     \references{
-        content/endmatter/references/IEEEabrv,
-        content/endmatter/references/research,
-        content/endmatter/references/sample}
+        references/IEEEabrv,
+        references/research,
+        references/sample}
     {IEEEtran}
 
     % The style used here is for AIAA formatting:
