Chapter1 outline started

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -6,3 +6,39 @@
 %%%%%%%% This line gets rid of page number on first page of text
 \thispagestyle{empty}
 %%%%%%%%%%%%%
+
+- Sensor accuracy is extremely important when taking measurements
+- Particularly important when working with high-risk/high-cost scenarios
+    - Human life is involved (lunar landers, for example)
+    - High financial cost
+    - % TODO: Find more specific examples (maybe find papers?)
+    - % TODO: Real life examples of situations where better accuracy would help?
+- Even taking measurements can be expensive
+    - Time-consuming
+    - Tedious
+    - Cost
+        - Financial
+        - Effort/Human time
+        - CPU time
+- It is important to maximize the accuracy of the measurements while minimizing
+  costs
+    - \textbf{Proposal: Proxy voting measurements}
+        - Inspired by "Proxy Voting for Better Outcomes"\cite{Cohensius2017}
+
+\section{Potential Applications}\label{sec:potential_applications}
+- % TODO: List potential applications, such as high risk/cost scenarios
+
+
+\section{Previous Work}\label{sec:previous_work}
+- "Proxy Voting for Better Outcomes"\cite{Cohensius2017} explores the idea of
+  using proxy voters to reduce, and even minimize under some voting mechanisms,
+  the social cost of voting.
+    - Paper assumes infinite voters, but I use finite voters (as few as possible)
+
+Research to be done:
+- Finite proxy voting
+- Current sensor error mitigation techniques
+- Typical sensor error rates
+- Sensor error distributions (e.g.\ Gaussian)
+- Any similar papers
+
