Slight edits to Chapter1 Outline

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -25,20 +25,22 @@
     - \textbf{Proposal: Proxy voting measurements}
         - Inspired by "Proxy Voting for Better Outcomes"\cite{Cohensius2017}
 
-\section{Potential Applications}\label{sec:potential_applications}
+\section{Potential Applications}\label{sec:potential-applications}
 - % TODO: List potential applications, such as high risk/cost scenarios
 
 
-\section{Previous Work}\label{sec:previous_work}
+\section{Previous Work}\label{sec:previous-work}
 - "Proxy Voting for Better Outcomes"\cite{Cohensius2017} explores the idea of
   using proxy voters to reduce, and even minimize under some voting mechanisms,
   the social cost of voting.
     - Paper assumes infinite voters, but I use finite voters (as few as possible)
 
 Research to be done:
+- Any similar papers
 - Finite proxy voting
+% Those below will likely require a specific type of sensor
 - Current sensor error mitigation techniques
 - Typical sensor error rates
+- Sensor variance
 - Sensor error distributions (e.g.\ Gaussian)
-- Any similar papers
 
