Additional Chapter1 Notes

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -28,12 +28,13 @@
 \section{Potential Applications}\label{sec:potential-applications}
 - % TODO: List potential applications, such as high risk/cost scenarios
 
-
 \section{Previous Work}\label{sec:previous-work}
 - "Proxy Voting for Better Outcomes"\cite{Cohensius2017} explores the idea of
   using proxy voters to reduce, and even minimize under some voting mechanisms,
   the social cost of voting.
     - Paper assumes infinite voters, but I use finite voters (as few as possible)
+    - Discuss voting mechanisms and discoveries
+    - Explain how what I'm doing is different
 
 Research to be done:
 - Any similar papers
