First couple Intro paragraphs written

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -7,6 +7,30 @@
 \thispagestyle{empty}
 %%%%%%%%%%%%%
 
+The ability to correctly take measurements is an important part of human
+progress, both in terms of every day lives and the advancement of science.
+Having the ability to take highly precise and accurate measurements is essential
+to maintaining safety, ensuring research is accurate, and providing a higher
+quality of life.
+This is particularly critical in high-risk or high-cost scenarios, such as when
+human life is involved or when using a sensor or taking a measurement is
+particularly expensive.  % Maybe expand on what "expensive" means?
+This paper explores the idea of using and adapted form of proxy voting, as
+described in~\cite{Cohensius2017}.
+
+\textit{Proxy voting} involves allowing agents to transfer their voting power
+from themselves to another agent, known as a \textit{proxy}\cite[para. 1.4]
+{Cohensius2017}.
+In doing so, the transferring agent looses their ability to directly affect the
+voting game.
+In other words, the transferring agent does not vote in an election but rather
+affects the election vicariously through the proxy to which they transferred
+their power.
+
+
+
+
+
 - Sensor accuracy is extremely important when taking measurements
 - Particularly important when working with high-risk/high-cost scenarios
     - Human life is involved (lunar landers, for example)
