--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -15,7 +15,7 @@ quality of life.
 This is particularly critical in high-risk or high-cost scenarios, such as when
 human life is involved or when using a sensor or taking a measurement is
 particularly expensive.  % Maybe expand on what "expensive" means?
-This paper explores the idea of using and adapted form of proxy voting, as
+This paper explores the idea of using an adapted form of proxy voting, as
 described in~\cite{Cohensius2017}.
 
 \textit{Proxy voting} involves allowing agents to transfer their voting power
