Added comma for clarity

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -13,7 +13,7 @@ Having the ability to take highly precise and accurate measurements is essential
 to maintaining safety, ensuring research is accurate, and providing a higher
 quality of life.
 This is particularly critical in high-risk or high-cost scenarios, such as when
-human life is involved or when using a sensor or taking a measurement is
+human life is involved, or when using a sensor or taking a measurement is
 particularly expensive.  % Maybe expand on what "expensive" means?
 This paper explores the idea of using an adapted form of proxy voting, as
 described in~\cite{Cohensius2017}.
