--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -7,16 +7,18 @@
 \thispagestyle{empty}
 %%%%%%%%%%%%%
 
+\section{Preliminaries}\label{sec:preliminaries}
 The ability to correctly take measurements is an important part of human
 progress, both in terms of every day lives and the advancement of science.
 Having the ability to take highly precise and accurate measurements is essential
 to maintaining safety, ensuring research is accurate, and providing a higher
 quality of life.
 This is particularly critical in high-risk or high-cost scenarios, such as when
-human life is involved, or when using a sensor or taking a measurement is
-particularly expensive.  % Maybe expand on what "expensive" means?
+human life is involved, or when the cost of using a sensor or taking a
+measurement is particularly expensive.  % Maybe expand on what "expensive" means?
 This paper explores the idea of using an adapted form of proxy voting, as
-described in~\cite{Cohensius2017}.
+described in~\cite{Cohensius2017}, as a way of taking multiple measurements to
+ensure accuracy while minimizing the cost of taking those measurements.
 
 \textit{Proxy voting} involves allowing agents to transfer their voting power
 from themselves to another agent, known as a \textit{proxy}\cite[para. 1.4]
@@ -26,33 +28,35 @@ voting game.
 In other words, the transferring agent does not vote in an election but rather
 affects the election vicariously through the proxy to which they transferred
 their power.
+These transferring agents are also known as \textit{inactive voters}, and the
+proxies can also be called \textit{active voters}.
 
+Normally the primary purpose of using proxy voting is to increase the welfare
+of the system by reducing the work required from the inactive voters.
+This is particularly useful when the process of voting is difficult or costly
+in some manner, such as when standing in long queues is required, frustrating
+restrictions are in place, or some other cost is incurred.
+In these cases, proxy voting allows agents to become inactive, thereby allowing
+the agents to skip paying the costs while still having their voice be heard
+through the proxies.
 
+While use cases of proxy voting are typically focussed on situations that
+are political or sociological in nature, this study aims to discover similar
+advantages in other realms.
+Primarily, the hope is to reduce the impact of measurement error by using
+a combination of `expensive' and `inexpensive' measurements to obtain a
+highly-accurate metric, about which the system can be confident.
 
-
-
-- Sensor accuracy is extremely important when taking measurements
-- Particularly important when working with high-risk/high-cost scenarios
-    - Human life is involved (lunar landers, for example)
-    - High financial cost
-    - % TODO: Find more specific examples (maybe find papers?)
-    - % TODO: Real life examples of situations where better accuracy would help?
-- Even taking measurements can be expensive
-    - Time-consuming
-    - Tedious
-    - Cost
-        - Financial
-        - Effort/Human time
-        - CPU time
-- It is important to maximize the accuracy of the measurements while minimizing
-  costs
-    - \textbf{Proposal: Proxy voting measurements}
-        - Inspired by "Proxy Voting for Better Outcomes"\cite{Cohensius2017}
 
 \section{Potential Applications}\label{sec:potential-applications}
 - % TODO: List potential applications, such as high risk/cost scenarios
 
 \section{Previous Work}\label{sec:previous-work}
+Proxy voting and other similar ideas have been explored a number of times
+primarily in the political and social science spheres\cite{Cohensius2017, Mueller1972, Zhang2022, Goelz2021}.
+These studies typically focus on the advantages, disadvantages, as well as
+augmentations of proxy voting when used by a society.
+
 - "Proxy Voting for Better Outcomes"\cite{Cohensius2017} explores the idea of
   using proxy voters to reduce, and even minimize under some voting mechanisms,
   the social cost of voting.
