Started intro pros and cons

--- a/references/research.bib
+++ b/references/research.bib
@@ -80,22 +80,48 @@ Page 62 might be interesting. It states random democracy might need 1000+ partic
   url       = {https://dl.acm.org/doi/10.5555/3535850.3536015},
 }
 
+@Article{Miller1969,
+  author     = {Miller, James C.},
+  journal    = {Public Choice},
+  title      = {A program for direct and proxy voting in the legislative process},
+  year       = {1969},
+  issn       = {1573-7101},
+  number     = {1},
+  pages      = {107--113},
+  volume     = {7},
+  abstract   = {This paper has argued that changing technology has increased opportunities for voter participation in the legislative process and has presented a proposal which takes some advantage of such possibilities. The objective has not been so much to criticize our present legislative voting arrangement, but to suggest for the future an alternative that might prove superior.},
+  comment    = {Accessible: [https://www.jstor.org/stable/30022612](https://www.jstor.org/stable/30022612)
+
+Possibly the origins of proxy voting--mostly political.},
+  doi        = {10.1007/BF01718736},
+  readstatus = {skimmed},
+  refid      = {Miller1969},
+  url        = {https://doi.org/10.1007/BF01718736},
+}
+
 @Article{Goelz2021,
-  author    = {Paul Gölz and Anson Kahng and Simon Mackenzie and Ariel D. Procaccia},
-  title     = {The Fluid Mechanics of Liquid Democracy},
-  year      = {2021},
-  month     = {10},
-  pages     = {1–39},
-  abstract  = {Liquid democracy is the principle of making collective decisions by letting agents transitively delegate their votes. Despite its significant appeal, it has become apparent that a weakness of liquid democracy is that a small subset of agents may gain massive influence. To address this, we propose to change the current practice by allowing agents to specify multiple delegation options instead of just one. Much like in nature, where—fluid mechanics teaches us—liquid maintains an equal level in connected vessels, we seek to control the flow of votes in a way that balances influence as much as possible. Specifically, we analyze the problem of choosing delegations to approximately minimize the maximum number of votes entrusted to any agent by drawing connections to the literature on confluent flow. We also introduce a random graph model for liquid democracy and use it to demonstrate the benefits of our approach both theoretically and empirically.},
-  address   = {New York, NY, USA},
-  booktitle = {ACM Trans. Econ. Comput.},
-  day       = {15},
-  doi       = {10.1145/3485012},
-  groups    = {Proxy Voting Examples},
-  keywords  = {Liquid democracy, democratic participation, power of two choices, preferential attachment, random graphs},
-  pagetotal = {39},
-  publisher = {Association for Computing Machinery},
-  url       = {https://doi.org/10.1145/3485012},
+  author     = {Paul Gölz and Anson Kahng and Simon Mackenzie and Ariel D. Procaccia},
+  journal    = {ACM Trans. Econ. Comput.},
+  title      = {The Fluid Mechanics of Liquid Democracy},
+  year       = {2021},
+  issn       = {2167-8375},
+  month      = {oct},
+  number     = {4},
+  pages      = {1–39},
+  volume     = {9},
+  abstract   = {Liquid democracy is the principle of making collective decisions by letting agents transitively delegate their votes. Despite its significant appeal, it has become apparent that a weakness of liquid democracy is that a small subset of agents may gain massive influence. To address this, we propose to change the current practice by allowing agents to specify multiple delegation options instead of just one. Much like in nature, where—fluid mechanics teaches us—liquid maintains an equal level in connected vessels, we seek to control the flow of votes in a way that balances influence as much as possible. Specifically, we analyze the problem of choosing delegations to approximately minimize the maximum number of votes entrusted to any agent by drawing connections to the literature on confluent flow. We also introduce a random graph model for liquid democracy and use it to demonstrate the benefits of our approach both theoretically and empirically.},
+  address    = {New York, NY, USA},
+  articleno  = {23},
+  booktitle  = {ACM Trans. Econ. Comput.},
+  day        = {15},
+  doi        = {10.1145/3485012},
+  groups     = {Proxy Voting Examples},
+  issue_date = {December 2021},
+  keywords   = {Liquid democracy, democratic participation, power of two choices, preferential attachment, random graphs},
+  numpages   = {39},
+  pagetotal  = {39},
+  publisher  = {Association for Computing Machinery},
+  url        = {https://doi.org/10.1145/3485012},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
