--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -7,7 +7,6 @@
 \thispagestyle{empty}
 %%%%%%%%%%%%%
 
-\section{Preliminaries}\label{sec:preliminaries}
 The ability to correctly take measurements is an important part of human
 progress, both in terms of every day lives and the advancement of science.
 Having the ability to take highly precise and accurate measurements is essential
@@ -17,13 +16,22 @@ This is particularly critical in high-risk or high-cost scenarios, such as when
 human life is involved, or when the cost of using a sensor or taking a
 measurement is particularly expensive.  % Maybe expand on what "expensive" means?
 This paper explores the idea of using an adapted form of proxy voting, as
-described in~\cite{Cohensius2017}, as a way of taking multiple measurements to
-ensure accuracy while minimizing the cost of taking those measurements.
+described in~\cite[para. 1.3]{Miller1969}, as a way of taking multiple
+measurements to ensure accuracy while minimizing the cost of taking those
+measurements.
 
+% FIXME: I should introduce the basics of my idea here, ot at least before getting too in depth of what proxy voting is
+
+
+\section{Contribution}\label{sec:contribution}
+% TODO: Go in depth as to what the purpose of this study is
+
+
+\section{Background}\label{sec:Background}
 \textit{Proxy voting} involves allowing agents to transfer their voting power
 from themselves to another agent, known as a \textit{proxy}\cite[para. 1.4]
 {Cohensius2017}.
-In doing so, the transferring agent looses their ability to directly affect the
+By doing so, the transferring agent looses their ability to directly affect the
 voting game.
 In other words, the transferring agent does not vote in an election but rather
 affects the election vicariously through the proxy to which they transferred
@@ -31,38 +39,93 @@ their power.
 These transferring agents are also known as \textit{inactive voters}, and the
 proxies can also be called \textit{active voters}.
 
-Normally the primary purpose of using proxy voting is to increase the welfare
-of the system by reducing the work required from the inactive voters.
-This is particularly useful when the process of voting is difficult or costly
-in some manner, such as when standing in long queues is required, frustrating
-restrictions are in place, or some other cost is incurred.
-In these cases, proxy voting allows agents to become inactive, thereby allowing
-the agents to skip paying the costs while still having their voice be heard
-through the proxies.
+In contrast, \textit{direct voting} requires each agent to vote on their own
+(and so incur the costs).
+%This ensures each agent has a direct influence on an election % TODO: Fill out this paragraph
 
-While use cases of proxy voting are typically focussed on situations that
-are political or sociological in nature, this study aims to discover similar
-advantages in other realms.
-Primarily, the hope is to reduce the impact of measurement error by using
-a combination of `expensive' and `inexpensive' measurements to obtain a
-highly-accurate metric, about which the system can be confident.
+In some cases, the proxy is also able to transfer their vote, as well as all
+their weight, to yet another proxy.
+This is known as \textit{liquid democracy}, which has its own challenges and
+advantages.
+However, simple proxy voting, where proxies cannot transfer their voting power,
+is sufficient for the research performed in this paper.
+
+Proxy voting has a number of advantages over direct voting.
+The most obvious advantage is it allows inactive voters to reduce the work
+required from them by choosing a proxy to perform the work of voting for them.
+Naturally, this is extremely useful when the cost of voting is high, such as
+when remaining educated on a topic is difficult or
+time-consuming~\cite[para 1.1]{Mueller1972}, uncomfortable work such as standing
+in long queues is required, or other frustrating or costly obstacles must be
+overcome.
+In these cases, proxy voting allows voters to skip paying the costs while still
+having their voice heard by allowing a proxy to perform the work once on behalf
+of all voting power transferred to it.
+
+This often also has the effect of increasing the system welfare by
+increasing the accuracy of the system~\cite[sec. 1.1]{Cohensius2017}.
+However, this increase does not work in all circumstances and so proxy voting
+should be used after investigating the voting mechanism used and the potential
+pitfalls of that mechanism under proxy voting.
+
+Proxy voting also allows for agents uninformed about the issue at hand to
+delegate the voting power to a trusted expert.
+For the purposes of this study, this is particularly useful.
+By using less accurate but cheaper measurements, the system can still yield
+increased accuracy and confidence in a result without requiring many more
+expensive measurements.
+
+However, proxy voting is not without its flaws.
+Gölz~et~al.~\cite[para. 1.3]{Goelz2021} investigated a weakness in liquid
+democracy dubbed ``super voters,'' which are proxies that receive such a large
+amount of power.
+This can be problematic because  the result of a system will be too biased
+towards the super voter.
+For this paper's purposes, a poor distribution of measurements will make one
+proxy a super voter and increase the error of the result.
+
+Another flaw is proxy voting can lead to less desirable outcomes in some
+situations.
+
+
+
+% PROS
+% - Increase of total system welfare
+% - Decreased work for inactive agents
+% - Allows uneducated agents to defer to a trusted expert
+%   - Advantageous because there is a large cost to staying educated on all topics [Mueller1972, p 58]
+% CONS
+% - Can lead to "Super voters" [Goelz2021, para. 1.3]
+%   - Allows for corruption
+% - Can lead to less desirable outcomes in some situations [Cohensius2017]
+% - Potential for proxies to betray inactive voters
+
+
+%% TODO: I don't like this paragraph, rewrite it
+%While use cases of proxy voting are typically focussed on situations that
+%are political or sociological in nature, this study aims to discover similar
+%advantages in other realms.
+%Primarily, the hope is to reduce the impact of measurement error by using
+%a combination of `expensive' and `inexpensive' measurements to obtain a
+%highly-accurate metric, about which the system can be confident.
 
 
 \section{Potential Applications}\label{sec:potential-applications}
 - % TODO: List potential applications, such as high risk/cost scenarios
 
-\section{Previous Work}\label{sec:previous-work}
+
+\section{Previous Work}\label{sec:previous-work}  % TODO: Maybe change this into Related Work?
 Proxy voting and other similar ideas have been explored a number of times
 primarily in the political and social science spheres\cite{Cohensius2017, Mueller1972, Zhang2022, Goelz2021}.
 These studies typically focus on the advantages, disadvantages, as well as
 augmentations of proxy voting when used by a society.
 
 - "Proxy Voting for Better Outcomes"\cite{Cohensius2017} explores the idea of
-  using proxy voters to reduce, and even minimize under some voting mechanisms,
-  the social cost of voting.
-    - Paper assumes infinite voters, but I use finite voters (as few as possible)
-    - Discuss voting mechanisms and discoveries
-    - Explain how what I'm doing is different
+using proxy voters to reduce, and even minimize under some voting mechanisms,
+the social cost of voting.
+- Paper assumes infinite voters, but I use finite voters (as few as possible)
+- Discuss voting mechanisms and discoveries
+- Explain how what I'm doing is different
 
 Research to be done:
 - Any similar papers
