Fixed typo in author's name

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -76,10 +76,10 @@ increased accuracy and confidence in a result without requiring many more
 expensive measurements.
 
 However, proxy voting is not without its flaws.
-Gölz~et~al.~\cite[para. 1.3]{Goelz2021} investigated a weakness in liquid
-democracy dubbed ``super voters,'' which are proxies that receive such a large
-amount of power.
-This can be problematic because  the result of a system will be too biased
+Gölz~et~al.\ investigated a weakness in liquid democracy dubbed `super voters'
+~\cite[para. 1.3]{Golz2021}, which are proxies that receive such a large amount
+of power.
+This can be problematic because the result of a system will be too biased
 towards the super voter.
 For this paper's purposes, a poor distribution of measurements will make one
 proxy a super voter and increase the error of the result.
@@ -95,7 +95,7 @@ situations.
 % - Allows uneducated agents to defer to a trusted expert
 %   - Advantageous because there is a large cost to staying educated on all topics [Mueller1972, p 58]
 % CONS
-% - Can lead to "Super voters" [Goelz2021, para. 1.3]
+% - Can lead to "Super voters" [Golz2021, para. 1.3]
 %   - Allows for corruption
 % - Can lead to less desirable outcomes in some situations [Cohensius2017]
 % - Potential for proxies to betray inactive voters
@@ -116,7 +116,7 @@ situations.
 
 \section{Previous Work}\label{sec:previous-work}  % TODO: Maybe change this into Related Work?
 Proxy voting and other similar ideas have been explored a number of times
-primarily in the political and social science spheres\cite{Cohensius2017, Mueller1972, Zhang2022, Goelz2021}.
+primarily in the political and social science spheres\cite{Cohensius2017, Mueller1972, Zhang2022, Golz2021}.
 These studies typically focus on the advantages, disadvantages, as well as
 augmentations of proxy voting when used by a society.
 
