--- a/references/research.bib
+++ b/references/research.bib
@@ -99,7 +99,7 @@ Possibly the origins of proxy voting--mostly political.},
   url        = {https://doi.org/10.1007/BF01718736},
 }
 
-@Article{Goelz2021,
+@Article{Golz2021,
   author     = {Paul Gölz and Anson Kahng and Simon Mackenzie and Ariel D. Procaccia},
   journal    = {ACM Trans. Econ. Comput.},
   title      = {The Fluid Mechanics of Liquid Democracy},
