--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -84,11 +84,6 @@ towards the super voter.
 For this paper's purposes, a poor distribution of measurements will make one
 proxy a super voter and increase the error of the result.
 
-Another flaw is proxy voting can lead to less desirable outcomes in some
-situations.
-
-
-
 % PROS
 % - Increase of total system welfare
 % - Decreased work for inactive agents
@@ -98,6 +93,9 @@ situations.
 % - Can lead to "Super voters" [Golz2021, para. 1.3]
 %   - Allows for corruption
 % - Can lead to less desirable outcomes in some situations [Cohensius2017]
+%   - From what I can tell this is not discussing the accuracy of a system, but
+%     rather that for the mean mechanism argmin and argmax will be active,
+%     meaning the most extreme opinions are in play.
 % - Potential for proxies to betray inactive voters
 
 
