Added preliminaries to Chapter2

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -4,6 +4,8 @@
 
 \chapter{EXPERIMENT DESIGN}\label{ch:experiment-design}
 
+\section{Preliminaries}\label{sec:preliminaries}
+% Talk basics about voting mechanisms and start explaining weighting mechanisms
 
 \section{Experiment Design}\label{sec:experiment-design}
 
