Added custom et al command

--- a/thesis.tex
+++ b/thesis.tex
@@ -80,15 +80,12 @@
 % manuscript by using \doi{}.
 \usepackage{doi}
 
+\usepackage{util}  % MDH: Contains my custom commands
+
 % Set spacing around figures and tables to triple space
 \setlength{\intextsep}{2em} % Vertical space above & below [h] floats
 \setlength{\textfloatsep}{2em} % Vertical space below (above) [t] ([b]) floats
 
-% The following is added if you are using the multiple-paper format to
-% add references after each chapter:
-%\usepackage[sectionbib]{chapterbib}
-
-%}}}
 
 % Author and Title Information
 \author{Michael D. Hegerhorst}
