--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -93,7 +93,7 @@ increased accuracy and confidence in a result without requiring many more
 expensive measurements.
 
 However, proxy voting is not without its flaws.
-Gölz~et~al.\ investigated a weakness in liquid democracy dubbed `super voters'
+\etal{Gölz} investigated a weakness in liquid democracy dubbed `super voters'
 ~\cite[para. 1.3]{Golz2021}, which are proxies that receive such a large amount
 of power.
 This can be problematic because the result of a system will be too biased
