--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -16,7 +16,7 @@ This is particularly critical in high-risk or high-cost scenarios, such as when
 human life is involved, or when the cost of using a sensor, taking a
 measurement, or running an experiment is particularly expensive.  % Maybe expand on what "expensive" means?
 This paper explores the idea of using an adapted form of proxy voting, as
-described in~\cite[para. 1.3]{Miller1969}, as a way of taking multiple
+described in~\cite[para.~1.3]{Miller1969}, as a way of taking multiple
 measurements to ensure accuracy while minimizing the cost of taking those
 measurements.
 
@@ -46,7 +46,7 @@ results.
 
 \section{Background}\label{sec:background}
 \textit{Proxy voting} involves allowing agents to transfer their voting power
-from themselves to another agent, known as a \textit{proxy}\cite[para. 1.4]
+from themselves to another agent, known as a \textit{proxy}\cite[para.~1.4]
 {Cohensius2017}.
 By doing so, the transferring agent looses their ability to directly affect the
 voting game.
@@ -72,7 +72,7 @@ The most obvious advantage is it allows inactive voters to reduce the work
 required of them by choosing a proxy to perform the work of voting for them.
 Naturally, this is extremely useful when the cost of voting is high, such as
 when remaining educated on a topic is difficult or
-time-consuming~\cite[para 1.1]{Mueller1972}, uncomfortable work such as standing
+time-consuming~\cite[para.~1.1]{Mueller1972}, uncomfortable work such as standing
 in long queues is required, or other frustrating or costly obstacles must be
 overcome.
 In these cases, proxy voting allows voters to skip incurring the costs while
@@ -80,7 +80,7 @@ still having their voice heard by allowing a proxy to perform the work once on
 behalf of all voting power transferred to it.
 
 This often also has the effect of increasing the system welfare by
-increasing the accuracy of the system~\cite[sec. 1.1]{Cohensius2017}.
+increasing the accuracy of the system~\cite[sec.~1.1]{Cohensius2017}.
 However, this increase does not work in all circumstances and so proxy voting
 should be used after investigating the voting mechanism used and the potential
 pitfalls of that mechanism under proxy voting.
@@ -94,7 +94,7 @@ expensive measurements.
 
 However, proxy voting is not without its flaws.
 \etal{Gölz} investigated a weakness in liquid democracy dubbed `super voters'
-~\cite[para. 1.3]{Golz2021}, which are proxies that receive such a large amount
+~\cite[para.~1.3]{Golz2021}, which are proxies that receive such a large amount
 of power.
 This can be problematic because the result of a system will be too biased
 towards the super voter.
